--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = [
     {name = "Thanka Bharathi",email = "thankabharathi0@gmail.com"}
 ]
 license = {text = "MIT"}
-requires-python = "^3.11"
+requires-python = "^3.12"
 dependencies = [
 ]
 
@@ -14,3 +14,8 @@ dependencies = [
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[dependency-groups]
+dev = [
+    "pre-commit (>=4.5.1,<5.0.0)"
+]
