--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,9 +8,18 @@ authors = [
 license = {text = "MIT"}
 requires-python = ">=3.12"
 dependencies = [
+    "typer (>=0.21.1,<0.22.0)",
+    "rich (>=14.2.0,<15.0.0)",
+    "python-dotenv (>=1.2.1,<2.0.0)",
+    "pydantic (>=2.12.5,<3.0.0)",
+    "structlog (>=25.5.0,<26.0.0)",
+    "asyncio (>=4.0.0,<5.0.0)",
+    "aiofiles (>=25.1.0,<26.0.0)"
 ]
 
 
+[project.optional-dependencies]
+openai = ["anthropic (>=0.76.0,<0.77.0)"]
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
@@ -23,7 +32,11 @@ dev = [
     "isort (>=7.0.0,<8.0.0)",
     "mypy (>=1.19.1,<2.0.0)",
     "pytest (>=9.0.2,<10.0.0)",
-    "pytest-cov (>=7.0.0,<8.0.0)"
+    "pytest-cov (>=7.0.0,<8.0.0)",
+    "pytest-asyncio (>=1.3.0,<2.0.0)",
+    "pytest-mock (>=3.15.1,<4.0.0)",
+    "ipython (>=9.9.0,<10.0.0)",
+    "ipdb (>=0.13.13,<0.14.0)"
 ]
 
 [tool.black]
@@ -93,3 +106,7 @@ omit = ["*/tests/*", "*/test_*.py"]
 precision = 2
 show_missing = true
 skip_covered = false
+
+[tool.poetry.extras]
+ai = ["openai", "anthropic"]
+all = ["openai", "anthropic"]
